fixed broken indicators on cards

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -32,6 +32,21 @@
 	width: 38;
 }
 
+.carousel-indicators li {
+    display: inline-block;
+    width: 35px;
+    height: 5px;
+    margin: 10px;
+    text-indent: 0;
+    cursor: pointer;
+    border: none;
+    background-color: #000000;
+}
+.carousel-indicators .active {
+
+    background-color: #ffffff;
+}
+
 .carousel-control-prev-icon {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
